--- a/bandsite/styles/partials/layout/_header.scss
+++ b/bandsite/styles/partials/layout/_header.scss
@@ -5,12 +5,14 @@
     background-color: $black-primary;
     @include flex (column, center, center);
     width: 100%;
+    height: 8.5vh;
     @include tablet {
-        @include flex(row, center, flex-end)
+        @include flex(row, center, flex-end);
+        padding: 0 .5rem;
     }
     &__img {
-        @include box (100%, 3vh);
-        margin: 2rem 0 0 0;
+        @include box (100%, 2vh);
+        margin: 1.5rem 0 0 0;
         @include tablet {
             margin: 0 2rem;
         }
@@ -26,27 +28,28 @@
         @include flex (row, flex-end, space-around);
         @extend %font-regular;
         position: relative;
-        top: 1rem;
+        top: .5rem;
         padding: 0;
         @include tablet {
             justify-content: left;
             margin: .5rem 0 .5rem 5rem;
-            top: .5rem;
+            top: .8rem;
         }
     }
     &__item {
         width: 100%;
         text-align: center;
-        padding: 0 0 1rem 0;
+        padding: 0 0 .5rem 0;
         border-bottom: 0.3125rem solid $black-primary;
         transition: all ease-in-out .2s;
         line-height: 1.5rem;
         letter-spacing: 0.0625rem;
-        font-size: 1.2rem;
+        font-size: .9rem;
         @include tablet {
-            padding: 2rem 0;
+            padding: 1.5rem 0;
             margin: 0 1.5rem;
             width: 23%;
+            font-size: 1rem;
         }
         @include desktop {
             padding: 2rem 0;
